<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2015 BRNmod Team
     Copyright (C) 2013-2015 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Setup Wizard</string>
    <string name="product_name" translatable="false">brnmod</string>
    <string name="os_name" translatable="false">BRNmod</string>
    <string name="default_theme_name" translatable="false">Material</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="ok">OK</string>
    <string name="loading">Just a sec\u2026</string>
    <string name="setup_complete">Setup is complete</string>
    <string name="setup_welcome">Welcome</string>
    <string name="setup_wifi">Select Wi-Fi</string>
    <string name="setup_sim_missing">SIM card missing</string>
    <string name="setup_choose_data_sim">Choose a SIM for data</string>
    <string name="setup_fdroid">Recommended Apps</string>
    <string name="setup_location">Location services</string>
    <string name="setup_common">Common settings</string>
    <string name="setup_sound">Sound settings</string>
    <string name="setup_other">Other services</string>
    <string name="setup_datetime">Date &amp; time</string>
    <string name="setup_current_date">Current date</string>
    <string name="setup_current_time">Current time</string>
    <string name="sim_missing_summary" product="tablet">A SIM card has not been detected in your tablet. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="sim_missing_summary" product="default">A SIM card has not been detected in your phone. To insert a SIM card, read the instructions that came with your device.</string>
    <string name="choose_data_sim_summary" product="tablet">Which SIM do you want to use for data? The selected SIM may incur network charges as it will be used to set up your tablet.</string>
    <string name="choose_data_sim_summary" product="default">Which SIM do you want to use for data? The selected SIM may incur network charges as it will be used to set up your phone.</string>
    <string name="date_time_summary">Set your time zone and adjust current date and time if needed</string>
    <string name="fdroid_summary">F-Droid is an app store with FOSS applications.</string>
    <string name="location_services_summary">The location is provided with μg UnifiedNlp by various plugins. Please <b>scroll down and enable some providers</b> in the settings.</string>
    <string name="location_access_summary"><b>Allow apps that have asked your permission</b> to use your location information. This may include your current location and past locations.</string>
    <string name="location_gps" product="tablet"><b>Improve location accuracy</b> by allowing apps to use the GPS on your tablet.</string>
    <string name="location_gps" product="default"><b>Improve location accuracy</b> by allowing apps to use the GPS on your phone.</string>
    <string name="location_network"><b>Use Wi-Fi</b> to help apps determine your location.</string>
    <string name="location_network_telephony"><b>Use Wi-Fi and mobile networks</b> to help apps determine your location.</string>
    <string name="setup_mobile_data">Turn on mobile data</string>
    <string name="setup_mobile_data_no_service">No service</string>
    <string name="setup_mobile_data_emergency_only">Emergency calls only</string>
    <string name="enable_mobile_data_summary">Do you want to use mobile data during setup? Turning on mobile data may be subject to data charges.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
    <string name="emergency_call">Emergency call</string>
    <string name="setup_unlock">Unlock</string>
    <string name="setup_device_locked">This device has been locked by the user.</string>
    <string name="setup_device_locked_instructions">
        <i>To turn this feature off/on, please go to Settings &gt; Security</i>
    </string>
    <string name="common_settings_summary">Here are some common settings, feel free to change them.</string>
    <string name="privacy_guard_default_summary">Enable <b>Privacy Guard</b> by default for newly-installed apps</string>
    <string name="advanced_reboot_summary"><b>Advanced reboot</b>: Include recovery, bootloader and soft reboot options in the power menu when unlocked</string>
    <string name="development_settings_summary">Enable <b>developer options</b> and show them in settings</string>
    <string name="sound_settings_summary">Here are some common sound and vibration settings, feel free to change them.</string>
    <string name="sound_effects_enabled_summary">Touch sounds</string>
    <string name="lockscreen_sounds_enabled_summary">Screen locking sounds</string>
    <string name="dtmf_tone_when_dialing">Dial pad tones</string>
    <string name="vibrate_input_devices_summary">Vibrate on touch</string>
    <string name="open_microg_nlp_settings">Open <b>µg UnifiedNlp</b> Settings</string>
    <string name="captive_portal_detection_summary">If a <b>captive portal</b> is detected show exclamation mark in status bar and switch to other data connection</string>
    <string name="app_icon">App icon</string>
</resources>
